--- a/springbootbackend/pom.xml
+++ b/springbootbackend/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.klef.dev</groupId>
 	<artifactId>springbootbackend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>springbootbackend</name>
 	<description>Spring Boot Backend Project</description>
 	<url/>
@@ -34,6 +35,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-tomcat</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -63,6 +70,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>trialbackend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
